--- a/src/components/SliderComponent.css
+++ b/src/components/SliderComponent.css
@@ -1,16 +1,22 @@
-.carousel-cell {
+.container {
+    width: 100%; /* Ocupa toda la pantalla */
+    height: auto; /* Altura automática */
+  }
+  
+  swiper-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 2px;
-    
+    overflow: hidden;
   }
   
-  .gray-square {
-    width: 200px;
-    height: 200px;
-    background-color: gray;
-    margin-bottom: 20px; /* Separación entre cuadrados */
+  swiper-slide {
+    flex-shrink: 0; 
+    width: 100%;
+    height: 170px;
+    margin-right: 10px; 
+    background-color: rgb(108, 109, 108); 
   }
   
+  swiper-wrapper {
+    display: flex;
+    transition: transform 0.3s ease; /* Animación de transición */
+  }
