--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,3 +46,19 @@ body { /*fondo*/
     text-wrap: balance;
   }
 }
+ /* Scrollbar */
+::-webkit-scrollbar {
+  width: 5px; 
+}
+
+::-webkit-scrollbar-track {
+  background-color: #00000000; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 5px; 
+}
+
+
+
