--- a/src/app/reset-password/styles.css
+++ b/src/app/reset-password/styles.css
@@ -42,8 +42,12 @@ body { /*fondo*/
   #heading {
     text-align: center;
     margin: 2em;
-    color: rgb(0, 255, 200);
     font-size: 1.5em;
+    font-weight: bold;
+    background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+    -webkit-background-clip: text; /* Para recortar el fondo del degradado al texto */
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 
   .message {
