--- a/src/components/SliderComponent.css
+++ b/src/components/SliderComponent.css
@@ -22,19 +22,20 @@
   }
 
   /* input de busqueda */
-  .field {
+  .field2 {
     border-radius: 30px;
     outline: none;
     padding: 0.6em;
     border: none;
-    width: 100%;
+    width: 25%;
     color: rgb(0, 255, 200);
-    background-color: #282828;
+    background-color: rgb(56, 56, 56);
+    
   }
 
   /* cards cuando buscas */
 
-  .card {
+  .carta {
     background-color: #282828;
     border-radius: 10px;
     margin: 10px;
@@ -47,3 +48,14 @@
     font-size: 1.2em; 
 }
   
+.titulo3 {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  color: rgb(108, 109, 108);
+  font-size: 1.2em; 
+  margin-top: 10px;
+  margin-left: 100px;
+  white-space: nowrap; 
+}
+
