--- a/src/components/MovieSearch.css
+++ b/src/components/MovieSearch.css
@@ -1,3 +1,77 @@
+.buscar {
+  position: relative;
+  border: none;
+  background-color: rgb(56, 56, 56);
+  color: #212121;
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+  font-weight: 600;
+  gap: 10px;
+  border-radius: 30px;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.buscar span {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+
+.buscar::before {
+  content: "";
+  position: absolute;
+  background-color: rgb(0, 255, 200);
+  width: 100%;
+  height: 100%;
+  left: 0%;
+  bottom: 0%;
+  transform: translate(-100%, 100%);
+  border-radius: inherit;
+}
+
+.buscar svg {
+  fill: rgb(0, 255, 200);
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.buscar:hover::before {
+  animation: shakeBack 0.6s forwards;
+}
+
+.buscar:hover svg {
+  fill: rgb(56, 56, 56);
+  scale: 1.1;
+}
+
+.buscar:active {
+  box-shadow: none;
+}
+
+@keyframes shakeBack {
+  0% {
+    transform: translate(-100%, 100%);
+  }
+
+  50% {
+    transform: translate(20%, -20%);
+  }
+
+  100% {
+    transform: translate(0%, 0%);
+  }
+}
+
+
+/* agregar a mi lista*/
+
 .checkbox-wrapper {
     display: flex;
     margin-top: 20px;
