--- a/src/components/SliderComponent.css
+++ b/src/components/SliderComponent.css
@@ -20,6 +20,47 @@
     display: flex;
     transition: transform 0.3s ease;
   }
+ /*botones de inicio y registrarse de HEADER*/
+  .botonH {
+    padding: 0.2em;
+    padding-left: 1.2em;
+    padding-right: 1.2em;
+    border-radius: 10em;
+    margin-top: 10px;
+    border: none;
+    outline: none;
+    transition: .4s ease-in-out;
+    background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+    color: rgb(0, 0, 0);
+  }
+  
+  .botonH:hover {
+    background-image: linear-gradient(163deg, #00642f 0%, #13034b 100%);
+    color: rgb(0, 255, 200);
+  }
+
+  .botonH2 {
+    padding: 0.2em;
+    padding-left: 1.2em;
+    padding-right: 1.2em;
+    border-radius: 10em;
+    margin-top: 10px;
+    border: none;
+    outline: none;
+    transition: .4s ease-in-out;
+    background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+    color: rgb(0, 0, 0);
+  }
+  
+  .botonH2:hover {
+    background-image: linear-gradient(163deg, #00642f 0%, #13034b 100%);
+    color: rgb(0, 255, 200);
+  }
+
+  /*SELECT DE HEADER*/
+  
+
+  /*---------------------------------------------------------------------------------*/
 
   /* input de busqueda */
   .field2 {
@@ -58,4 +99,6 @@
   margin-left: 100px;
   white-space: nowrap; 
 }
+
+
 
