--- a/src/app/signIn/style.css
+++ b/src/app/signIn/style.css
@@ -82,8 +82,8 @@ body { /*fondo*/
   .input-field:-webkit-autofill:hover, 
   .input-field:-webkit-autofill:focus, 
   .input-field:-webkit-autofill:active {
-      background-color: #171717; /* Mantén el color de fondo */
-      -webkit-text-fill-color: rgb(0, 255, 200); /* Mantén el color del texto */
+      background-color: #171717; 
+      -webkit-text-fill-color: rgb(0, 255, 200); 
       -webkit-box-shadow: 0 0 0 30px #171717 inset
   }
   
@@ -94,8 +94,16 @@ body { /*fondo*/
     margin-top: 2.5em;
   }
   
+
+  .btn {
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: center;
+  }
+
   .button1 {
-    padding: 0.5em;
+    margin: 0.5em;
+    padding: 0.5em 1em;
     padding-left: 0em;
     padding-right: 0.2em;
     border-radius: 5px;
@@ -113,7 +121,8 @@ body { /*fondo*/
   }
   
   .button2 {
-    padding: 0.5em;
+    margin: 0.5em;
+    padding: 0.5em 1em;
     padding-left: 2.2em;
     padding-right: 2.2em;
     border-radius: 5px;
@@ -129,12 +138,25 @@ body { /*fondo*/
     color: rgb(0, 255, 200);
   }
   
+  .form .btn2 {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    margin-top: -1em;
+  }
+  
+
+  .btn2 {
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: center;
+  }
+
+
   .button3 {
     margin-left: 2.7em; 
-    margin-top: 0.2em; 
-    margin-bottom: 20px;
+    margin: 1em auto;
     padding: 0.5em;
-    width: 271px;
     border-radius: 5px;
     border: none;
     outline: none;
@@ -142,6 +164,7 @@ body { /*fondo*/
     background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
     color: rgb(0, 0, 0);
     text-align: center;
+    cursor: pointer;
   }
   
   .button3:hover {
@@ -172,6 +195,21 @@ body { /*fondo*/
     box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
   }
 
+  @media (max-width: 576px) {
+    .button {
+      padding: 0.5em 0.7em; 
+      margin: 0.3em; 
+    }
+  }
   
+  @media (max-width: 400px) {
+    .button {
+      width: 100%; 
+    }
+  }
 
-
+  @media (min-width: 576px) {
+    .button3 {
+      margin: 1em 2.7em; 
+    }
+  }
