--- a/src/components/SliderComponent.css
+++ b/src/components/SliderComponent.css
@@ -1,17 +1,19 @@
 .container2 {
     width: 100%; 
     height: auto;
+    max-width: 100%;
   }
   
   swiper-container {
     display: flex;
     overflow: hidden;
+    width: 100%;
   }
   
   swiper-slide {
     flex-shrink: 0; 
-    width: 100%;
-    height: 170px;
+    width: auto;
+    height: auto;
     margin-right: 10px; 
     background-color: rgb(108, 109, 108); 
   }
@@ -19,6 +21,7 @@
   swiper-wrapper {
     display: flex;
     transition: transform 0.3s ease;
+    flex-wrap: nowrap;
   }
  /*botones de inicio y registrarse de HEADER*/
   .botonH {
