--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,9 +17,10 @@
 }
 
 .titulo {
-    color: rgb(0, 255, 200);
-    font-size: 1.5em;
-    margin-left: 20px;
+  color: #0c7ee9;
+  font-size: 1.5em;
+  margin-left: 20px;
+  font-weight: bold;
 }
 
 body { /*fondo*/
