--- a/src/app/signIn/style.css
+++ b/src/app/signIn/style.css
@@ -26,6 +26,7 @@ body { /*fondo*/
 }
 
 
+
 .form {
     display: flex;
     flex-direction: column;
@@ -45,7 +46,18 @@ body { /*fondo*/
     font-size: 1.7em;
     font-weight: bold;
     background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
-    -webkit-background-clip: text; /* Para recortar el fondo del degradado al texto */
+    -webkit-background-clip: text; 
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }  
+
+  .h1{
+    text-align: center;
+    margin: 2em;
+    font-size: 2.4em;
+    font-weight: bold;
+    background-image: linear-gradient(163deg, #00ff75 39%, #3700ff 62%);
+    -webkit-background-clip: text; 
     background-clip: text;
     -webkit-text-fill-color: transparent;
   }
