--- a/src/app/signUp/style.css
+++ b/src/app/signUp/style.css
@@ -25,6 +25,16 @@ body { /*fondo*/
     background-size: calc(2 * var(--s)) calc(3.46 * var(--s));
   }
 
+  .h1{
+    text-align: center;
+    margin: 2em;
+    font-size: 2.4em;
+    font-weight: bold;
+    background-image: linear-gradient(163deg, #00ff75 39%, #3700ff 62%);
+    -webkit-background-clip: text; 
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 
 .form {
     display: flex;
