--- a/front-end/src/app/(header)/miLista/style.css
+++ b/front-end/src/app/(header)/miLista/style.css
@@ -1,4 +1,4 @@
-.button1 {
+.btn1 {
     margin: 0.5em;
     padding: 0.7em 1em;
     padding-left: 0.5em;
@@ -8,53 +8,15 @@
     border: none;
     outline: none;
     transition: .4s ease-in-out;
+    font-size: 1.5em;
     background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
     color: rgb(0, 0, 0);
   }
   
-  .button1:hover {
+  .btn1:hover {
     background-image: linear-gradient(163deg, #00642f 0%, #13034b 100%);
     color: rgb(0, 255, 200);
   }
-
-
-  .button2 {
-    margin: 0.5em;
-    padding: 0.5em 1em;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    border-radius: 5px;
-    margin-right: 0.5em;
-    border: none;
-    outline: none;
-    transition: .4s ease-in-out;
-    background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
-    color: rgb(0, 0, 0);
-  }
-  
-  .button2:hover {
-    background-image: linear-gradient(163deg, #00642f 0%, #13034b 100%);
-    color: rgb(0, 255, 200);
-  }
-
-    .button3 {
-        margin: 0.5em;
-        padding: 0.5em 1em;
-        padding-left: 0.5em;
-        padding-right: 0.5em;
-        border-radius: 5px;
-        margin-right: 0.5em;
-        border: none;
-        outline: none;
-        transition: .4s ease-in-out;
-        background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
-        color: rgb(0, 0, 0);
-    }
-
-    .button3:hover {
-        background-image: linear-gradient(163deg, #00642f 0%, #13034b 100%);
-        color: rgb(0, 255, 200);
-    }
 
     .carta1 {
         background-color: rgb(56, 56, 56);
@@ -70,11 +32,32 @@
         font-weight: bold;
       }
     
-    .button1.active,
-    .button2.active,
-    .button3.active {
+    .btn1.active{
   background-image: linear-gradient(163deg, #00642f 0%, #13034b 100%);
   color: rgb(0, 255, 200);
 }
 
-  
+.btn2 {
+  margin: 0.5em;
+  padding: 0.7em 1em;
+  padding-left: 0.7em;
+  padding-right: 0.7em;
+  border-radius: 5px;
+  margin-right: 0.5em;
+  border: none;
+  outline: none;
+  transition: .4s ease-in-out;
+  font-size: 1.5em;
+  background-image: linear-gradient(163deg, #00ff75 0%, #3700ff 100%);
+  color: rgb(0, 0, 0);
+}
+
+.btn2:hover {
+  background-image: linear-gradient(163deg, #00642f 0%, #13034b 100%);
+  color: rgb(0, 255, 200);
+}
+
+.btn2.active{
+  background-image: linear-gradient(163deg, #00642f 0%, #13034b 100%);
+  color: rgb(0, 255, 200);
+}
